--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,5 +72,5 @@ jobs:
       - name: Publish to GitHub Packages
         run: pnpm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.PACKAGES_AUTH_TOKEN }}
 
