--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,47 +9,8 @@ on:
       - "**" 
 
 jobs:
-  lint:
-    name: Lint 
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: pnpm install
-
-      - name: Run Lint
-        run: pnpm lint
-
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: pnpm install
-
-      - name: Run Tests
-        run: pnpm test
-
   publish:
     name: Publish to GitHub Packages
-    needs: [lint, test] 
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' 
 
@@ -63,11 +24,8 @@ jobs:
           node-version: 18
           registry-url: https://npm.pkg.github.com
 
-      - name: Install Dependencies
-        run: pnpm install
-
-      - name: Build Package
-        run: pnpm build
+      - name: Install pnpm 
+        run: npm install -g pnpm
 
       - name: Publish to GitHub Packages
         run: pnpm publish --access public
