--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@BiteCreators/config",
+  "name": "@byte-creators/config",
   "version": "1.0.0",
   "description": "congiguration files",
   "main": "index.js",
