--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@byte-creators/config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "congiguration files",
-  "main": "index.js",
+  "main": "index.cjs",
+  "files": [
+    "./tsconfig.base.json",
+    "./tailwind.config.base.cjs",
+    "./.eslintrc.cjs",
+    "./.prettierrc.cjs",
+    "./.stylelintrc.cjs"
+  ],
   "peerDependencies": {
     "typescript": "^5",
     "tailwindcss": "^3.4.1",
