--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.3",
   "description": "congiguration files",
   "main": "index.cjs",
+  "types": "index.d.ts",
   "files": [
-    "./tsconfig.base.json",
+    "./tsconfig.next.json",
+    "./tsconfig.npm.json",
     "./tailwind.config.base.cjs",
     "./.eslintrc.cjs",
     "./.prettierrc.cjs",
     "./.stylelintrc.cjs"
   ],
   "peerDependencies": {
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
-    "stylelint": "^16.9.0",
     "@it-incubator/eslint-config": "^1.0.3",
     "@it-incubator/prettier-config": "^0.1.2",
     "@it-incubator/stylelint-config": "^2.0.0",
@@ -21,7 +20,10 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-testing-library": "^6.4.0"
+    "eslint-plugin-testing-library": "^6.4.0",
+    "stylelint": "^16.9.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "keywords": [],
   "author": "",
