--- a/tsconfig.npm.json
+++ b/tsconfig.npm.json
@@ -3,7 +3,7 @@
     "target": "esnext",                   
     "module": "esnext",                   
     "moduleResolution": "node",          
-    "lib": ["esnext"],                    
+    "lib": ["dom", "dom.iterable", "esnext"],                    
     "jsx": "react-jsx",                  
     "esModuleInterop": true,             
     "skipLibCheck": true,                 
@@ -13,8 +13,6 @@
     "incremental": true,                 
     "declaration": true,                
     "declarationMap": true,              
-    "outDir": "dist",                    
-    "rootDir": "src",                    
     "allowJs": true,                      
     "noEmit": false,                      
     "baseUrl": ".",                       
